--- a/foundations/intro-to-css/02-class-id-selectors/index.html
+++ b/foundations/intro-to-css/02-class-id-selectors/index.html
@@ -11,7 +11,7 @@
     <p class="odd-numbers">Number 1 - I'm a class!</p>
     <div id="blue">Number 2 - I'm one ID.</div>
     <p class="odd-numbers third">Number 3 - I'm a class, but cooler!</p>
-    <div id="fourth">Number 4 - I'm another ID.</div>
+    <div id="fourth">Number 4 - I'm another ID.</div> <!--I could add class ".third"-->
     <p class="odd-numbers">Number 5 - I'm a class!</p>
   </body>
 </html>
