--- a/foundations/intro-to-css/03-grouping-selectors/index.html
+++ b/foundations/intro-to-css/03-grouping-selectors/index.html
@@ -1,3 +1,20 @@
+<!DOCTYPE html> <!--second try-->
+<html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Grouping Selectors</title>
+    <link rel="stylesheet" href="style.css">
+  </head>
+  <body>
+    <button class="first">Click Me!</button>
+    <button class="second">No, Click Me!</button>
+  </body>
+</html> 
+
+
+<!--
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -8,7 +25,8 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <button>Click Me!</button>
-    <button>No, Click Me!</button>
+    <button class="first both">Click Me!</button>
+    <button class="second both">No, Click Me!</button>
   </body>
-</html>
+</html> 
+-->
